Fix `<figure>` elements being placed inside `<p>` elements
Paragraph elements cannot contain figure elements as figures are not
considered "Phrasing content".

This fix ensures that in simple cases where an image is in a paragraph
and that paragraph is inside a non-paragraph element, the figure will be
placed after the paragraph, not within it.

Doing so prevents the plugin from outputting invalid HTML.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/node": "^22.10.5",
     "rehype": "^13.0.2",
+    "rehype-minify-whitespace": "^6.0.2",
     "typescript": "^5.7.2"
   }
 }
